This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ Ticket #3548, Add British English translation
+ Ticket #3590, Internal filters: Support for HEVC and VP9
+ Ticket #3605, Support playlists using UTF8 encoding without BOM
+ Ticket #3643, Add Slovenian translation
* Updated Portuguese (Brazil) translation
* Updated VirtualDub to v1.10.4
* Updated Unrar to v5.0.0.12
* Updated Little CMS to v2.6b (git 69ecafd)
! DVD: The chapter marks could be wrong for some titles
! Ticket #1478, Slightly improve the precision of the frame number in the Go To dialog.
  The frame number was sometimes off by 1. This was easily noticeable when doing frame-stepping
! Ticket #1555, Use elapsed/remaining time for the chapter change OSD depending on what is selected
  for the time display. Also prevent the OSD from blinking when changing the chapter
! Ticket #3518, Improve the reliability of the [DXVA] indicator in the status bar. Sometimes
  the indicator wasn't shown while hardware acceleration was used
! Ticket #3523/#3533/#3551, Improve the stability of MPC-HC on buggy systems
! Ticket #3530, Internal LAV Splitter: the advanced subtitle selection modes were ignored
! Ticket #3564, If "Keep history of recently opened file" option was enabled, MPC-HC crashed
  when opening very long URLs
! Ticket #3601, Internal LAV Video Decoder: Fix a crash with DXVA on AMD cards when stopping playback
! Ticket #3672, "Output" property page: "Shader" and "Rotation" were sometimes wrongly displayed
  as unavailable for "Sync renderer"
! Ticket #3676, Internal LAV Audio Decoder: Fix a crash when using old versions of the ArcSoft DTS Decoder
  to handle DTS decoding internally
! Ticket #3702, External audio was not synced on open if restarting from the latest remembered position