@@ -89,6 +89,9 @@ enum SOURCE_FILTER {
 #if INTERNAL_SOURCEFILTER_FLV
     SRC_FLV,
 #endif
+#if INTERNAL_SOURCEFILTER_ASF
+    SRC_ASF,
+#endif
 #if INTERNAL_SOURCEFILTER_FLAC
     SRC_FLAC,
 #endif
