@@ -41,6 +41,7 @@
 #define INTERNAL_SOURCEFILTER_FLIC      INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_FLAC      INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_FLV       INTERNAL_FILTERS_ENABLED
+#define INTERNAL_SOURCEFILTER_ASF       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_MATROSKA  INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_MP4       INTERNAL_FILTERS_ENABLED
 #define INTERNAL_SOURCEFILTER_OGG       INTERNAL_FILTERS_ENABLED
@@ -100,7 +101,7 @@
 // Groups
 #define HAS_SOURCEFILTERS \
     (INTERNAL_SOURCEFILTER_AVI || INTERNAL_SOURCEFILTER_CDDA || INTERNAL_SOURCEFILTER_CDXA || INTERNAL_SOURCEFILTER_DSM || INTERNAL_SOURCEFILTER_DTSAC3 ||       \
-    INTERNAL_SOURCEFILTER_VTS || INTERNAL_SOURCEFILTER_FLIC || INTERNAL_SOURCEFILTER_FLAC || INTERNAL_SOURCEFILTER_FLV ||      \
+    INTERNAL_SOURCEFILTER_VTS || INTERNAL_SOURCEFILTER_FLIC || INTERNAL_SOURCEFILTER_FLAC || INTERNAL_SOURCEFILTER_FLV || INTERNAL_SOURCEFILTER_ASF ||           \
     INTERNAL_SOURCEFILTER_MATROSKA || INTERNAL_SOURCEFILTER_MP4 || INTERNAL_SOURCEFILTER_OGG || INTERNAL_SOURCEFILTER_MPEGAUDIO || INTERNAL_SOURCEFILTER_MPEG || \
     INTERNAL_SOURCEFILTER_REALMEDIA || INTERNAL_SOURCEFILTER_HTTP || INTERNAL_SOURCEFILTER_UDP ||INTERNAL_SOURCEFILTER_RTP || INTERNAL_SOURCEFILTER_RTSP ||      \
     INTERNAL_SOURCEFILTER_AVI2AC3 || INTERNAL_SOURCEFILTER_RFS)
