@@ -10,6 +10,7 @@ Legend:
 
 next version - not released yet
 ===============================
++ Ticket #2655, Internal filters: Support WMV/ASF/DVR-MS splitting
 + Ticket #3548, Add British English translation
 + Ticket #3590, Internal filters: Support for HEVC and VP9
 + Ticket #3605, Support playlists using UTF8 encoding without BOM
